ui/pages/keyring-snaps/new-snap-account-page/new-snap-account-page.scss
.snap-account-page {
  $width-screen-sm-min: 85vw;
  $width-screen-md-min: 80vw;
  $width-screen-lg-min: 62vw;

  min-height: 100%;
  display: flex;
  flex-direction: column;

  @include screen-sm-min {
    width: $width-screen-sm-min;
  }

  @include screen-md-min {
    width: $width-screen-md-min;
  }

  @include screen-lg-min {
    width: $width-screen-lg-min;
  }

  background-image: url('images/snap-account-page.svg');
  background-size: 100% auto;
  background-repeat: no-repeat;
  background-position: bottom;
}

.snap-account-cards {
  grid-template-columns: repeat(3, 1fr);
  height: 100%;
}

.snap-account-color-text {
  background-image: linear-gradient(0.45deg, #f6851b, #43aefc);
  background-clip: text;
  color: transparent;
}

.snap-account-footer {
  align-self: center;
}

